--- a/config/config.json
+++ b/config/config.json
@@ -4,20 +4,20 @@
     "password": null,
     "database": "burgers_db",
     "host": "127.0.0.1",
-    "dialect": "mysql2"
+    "dialect": "mysql"
   },
   "test": {
     "username": "root",
     "password": null,
     "database": "database_test",
     "host": "127.0.0.1",
-    "dialect": "mysql2"
+    "dialect": "mysql"
   },
   "production": {
     "username": "root",
     "password": null,
     "database": "burgers_db",
     "host": "127.0.0.1",
-    "dialect": "mysql2"
+    "dialect": "mysql"
   }
 }
